fixed the dropdown issues, added a chevron pointing downwards

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                   <li class="active-menu"><a href="#">calender</a></li>
                   <li><a href="#">dashboard</a></li>
                   <li class="dropdown">
-                     <a href="#">drive</a>
+                     <a href="#">drive <img src="images/icons/chevron_down.png" alt="dropdown">  </a>
                      <ul class="dropdown-content">
                         <li> <a href="#">navigation item</a> </li>
                         <li> <a href="#">navigation item</a> </li>
