added focus fix for the search fields., added 'interactivity' for the chevron buttons and grid style buttons

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                     <img src="images/icons/list.png" alt="grid view">
                     </span>
                     <div class="text-center percent-91">
-                       <span><img class="chevron-flipped" src="images/icons/chevron_right.png" alt="right"></span>
+                       <span><img class="chevron-flipped hover" src="images/icons/chevron_right.png" alt="right"></span>
                        <h3 class="month-active">May 2018</h3>
-                       <span><img src="images/icons/chevron_right.png" alt="right"></span>
+                       <span><img src="images/icons/chevron_right.png" alt="right" class="hover"></span>
                     </div>
                  </div>
                  <div class="calendar-grid">
