added dots to the event that has more info (guessing), and fixed the dropdown some more.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                           <span class="day-number current-month-day" data-event="2">12</span>
                        </div>
                        <div class="events">
-                         <div class="event" style="right: 32px;width: 305px;">
+                         <div class="event event-more" style="right: 32px;width: 305px;">
                            Secodment
                          </div>
                        </div>
